[fix] rename ParticipationController
